# bc-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md
bc_files/: test_addition.bc
include/: codegen_arm.h  compile.h  lexer.h  node.h  parser.h  register_allocator.h  shell_command_runner.h  token.h
lib/: math.bc
scripts/: generate_executable.sh  run_tests.sh
src/: b-compiler.cpp  codegen_arm.c  compile.c  lexer.c  main.c  parser.c  register_allocator.c  shell_command_runner.c  token.c
src/allocator/: allocator.cpp  allocator.h
src/generator/: generator.cpp  generator.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
test_files/: basic.bc  test1.b  test_addition.bc
tests/test_files/: basic.bc
